[package]
name = "blair_mountain"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Restioson/blair_mountain"
documentation = "https://docs.rs/blair_mountain"
readme = "README.md"
keywords = ["unsafe", "union"]

[dependencies]
paste = "^0.1"
