[package]
name = "blair_mountain"
description = "Union types in release mode with debug assertions in debug mode"
version = "0.2.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Restioson/blair_mountain"
documentation = "https://docs.rs/blair_mountain"
readme = "README.md"
keywords = ["unsafe", "union"]

[dependencies]
paste = "^0.1"
